[package]
name = "ftab-dump"
version = "1.4.0"
authors = ["Kenan Sulayman <kenan@sig.dev>"]
license = "MIT"
description = "Dumps files from FTAB firmware images ('rksoftab' / 'RKSOFTAB') used in Apple micro-devices."
readme = "readme.md"
edition = "2021"
categories = ["command-line-utilities", "parser-implementations", "embedded", "encoding", "parsing"]
keywords = ["ftab", "firmware", "apple", "container"]
repository = "https://github.com/19h/ftab-dump"

[[bin]]
bench = false
path = "src/main.rs"
name = "ftab-dump"

[dependencies]
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }

[profile]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
